# kotobridge

./: .gitignore  README.md  pyproject.toml
src/db/: init_db.py
src/db/migrations/: migration.sql
src/kotobridge/: cli.py  crawler.py  model.py  translate.py
