[project]
name = "kotobridge"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed Salah",email = "toushi2009@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "openai-whisper",
    "psutil",
    "ollama",
    "faster-whisper",
    "nvidia-cublas-cu12"

]

[project.scripts]
koto = "kotobridge.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

